longest word game include cookies session and player score

--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,5 +1,6 @@
 <div class="new_game_container">
   <h1>Your Result:</h1>
   <h2> <%= @answer %> </h2>
+  <h2> Your score is now: <%= session[:score] %></h2>
   <%= link_to "Play again!", new_path %>
 </div>
